# openschafkopf

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  ai_remarks.txt  bitbucket-pipelines.yml  build.rs  clippy.toml  ruleset_bettel.toml  ruleset_bettel_only.toml  ruleset_doubling_stock.toml  ruleset_only_rufspiel.toml  todo.txt
examples/: analyze.sh  archive_from_sauspiel.sh  cli.sh  kartenverteilung_auf_mitspieler.rhai  kartenverteilung_auf_mitspieler.sh  longest_farbe.rhai  rufsau.sh  suggest_card.sh  suggest_card_2.sh  suggest_card_all_possible_distributions.sh  websocket.sh
examples/dillig_steffan_mit_taktik_zum_erfolg_1/: uebung_1_1.sh  uebung_1_12.sh  uebung_2_10.sh  uebung_2_4.sh  uebung_3_20.sh  uebung_3_4.sh  uebung_4_16.sh  uebung_4_6.sh  uebung_5_17.sh  uebung_5_33.sh
examples/dillig_steffan_mit_taktik_zum_erfolg_2/: uebung_1_5.sh  uebung_1_8.sh  uebung_2_2.sh  uebung_2_4.sh  uebung_3_10.sh  uebung_3_11.sh  uebung_4_18.sh  uebung_4_3.sh  uebung_5_13.sh  uebung_5_7.sh
examples/guggenmos_matthias_schafkopf_watch/: README.md  os_benchmark.py  os_benchmark_visualize.ipynb
examples/holzapfel_michael_wkten/: 5_wenz.sh  7_solo.sh  7_solo_gegner_trumpf_ober_unter.rhai  README.md
examples/scharrer_martin_wkten_beim_schafkopf/: 2_trumpfwahrscheinlichkeit_der_anderen_teilnehmer.sh  6_stechen_mit_farben.sh  README.md  (+3 more)
html_generator/: Cargo.toml  README.md
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/ai/: cardspartition.rs  gametree.rs  handiterators.rs  mod.rs  stichoracle.rs  test.rs  test_stichoracle.py
lib/src/ai/rulespecific/: airufspiel.rs
lib/src/game/: mod.rs  run.rs
lib/src/game_analysis/: Schafkopfprotokoll_vom_04.08.24.txt  Schafkopfprotokoll_vom_14.12.22.txt  Schafkopfprotokoll_vom_16.05.20.txt  determine_best_card_table.rs  mod.rs  parser.rs
lib/src/player/: mod.rs  playercomputer.rs  playerrandom.rs
lib/src/primitives/: card.rs  eplayerindex.rs  hand.rs  stich.rs  stichsequence.rs
lib/src/rules/: mod.rs  parser.rs  payoutdecider.rs  rulesbettel.rs  ruleset.rs  rulesramsch.rs  rulesrufspiel.rs  rulessolo.rs  singleplay.rs  tests.rs  trumpfdecider.rs
lib/src/util/: box_clone.rs  dbg_argument.rs  forward_to_field.rs  int_ext.rs  interval.rs  mod.rs  optionext.rs  static_option.rs  staticvalue.rs
lib/tools/: combinatorics.ods  css.less  test_rules.py  timings_eichel_wenz_epi3_suezekeoe8e7sas7.txt
lib/tools/site/: site.css  site.ts
logging/: Cargo.toml
logging/src/: lib.rs
main/: Cargo.toml  build.rs
main/src/: main.rs
main/src/ai/: cardspartition.rs  gametree.rs  handiterators.rs  mod.rs  stichoracle.rs  suspicion.rs  test.rs
main/src/ai/rulespecific/: airufspiel.rs  mod.rs
main/src/game/: mod.rs  run.rs
main/src/game_analysis/: Schafkopfprotokoll_vom_20.03.23.txt  determine_best_card_table.rs  mod.rs  parser.rs
main/src/player/: mod.rs  playercomputer.rs  playerhuman.rs  playerrandom.rs
main/src/primitives/: accountbalance.rs  card.rs  cardvector.rs  eplayerindex.rs  hand.rs  mod.rs  stich.rs  stichsequence.rs  wrappers.rs
main/src/rules/: card_points.rs  mod.rs  parser.rs  payoutdecider.rs  rulesbettel.rs  ruleset.rs  rulesramsch.rs  rulesrufspiel.rs  rulessolo.rs  singleplay.rs  tests.rs  trumpfdecider.rs
main/src/sauspiel/: mod.rs
main/src/skui/: mod.rs
main/src/subcommands/: analyze.rs  cli.rs  common_given_game.rs  dl.rs  hand_stats.rs  handconstraint.rs  mod.rs  parse.rs  rank_rules.rs  suggest_card.rs  webext.rs  websocket.rs
main/src/subcommands/cli/: mod.rs  playerhuman.rs  skui.rs
main/src/subcommands/websocket/: gamephase.rs  mod.rs
main/src/util/: assign.rs  bitfield.rs  box_clone.rs  dbg_argument.rs  enumchains.rs  if_then.rs  logging.rs  mod.rs  parser.rs  staticvalue.rs  vecext.rs
main/tools/: generate_histogram_svg.py  test.rhai
main/tools/site/: site.html  site.ts  tsconfig.json
monitor/: Cargo.toml
netschafkopf_helper/: Cargo.toml  README.md  build_and_inject.sh  run_netschk_and_inject.bat
netschafkopf_helper/injector/: Cargo.toml
netschafkopf_helper/injector/src/: main.rs
netschafkopf_helper/misc/: convert_schafkopfprotocol.py  stat_ohne_openschafkopf.csv
netschafkopf_helper/misc/protokolle/: plot.gp
netschafkopf_helper/misc/protokolle/baseline/: Schafkopfprotokoll vom 05.10.23_01.txt  Schafkopfprotokoll vom 05.10.23_02.txt  Schafkopfprotokoll vom 05.10.23_03.txt  Schafkopfprotokoll vom 05.10.23_04.txt  Schafkopfprotokoll vom 05.10.23_05.txt  Schafkopfprotokoll vom 05.10.23_06.txt
netschafkopf_helper/misc/protokolle/cheat_ab_stich_3/: Schafkopfprotokoll vom 03.10.23_01.txt  Schafkopfprotokoll vom 04.10.23_02.txt  Schafkopfprotokoll vom 04.10.23_03.txt  Schafkopfprotokoll vom 04.10.23_04.txt  Schafkopfprotokoll vom 04.10.23_05.txt  Schafkopfprotokoll vom 04.10.23_06.txt
netschafkopf_helper/src/: lib.rs
openschafkopf-shared_args/: Cargo.toml
openschafkopf-websocket/: Cargo.toml
openschafkopf-websocket/src/: gamephase.rs  main.rs  websocket.rs
rulesets/: default.toml  default_kurz.toml  force_stock.toml  only_ramsch.toml
sauspiel_webext/: Cargo.toml  README.md  run_wasm_pack_build.sh
sauspiel_webext/src/: lib.rs
sauspiel_webext/webext/: manifest.json  run_webext_build.sh  run_webext_in_browser.sh  sauspiel_webext_content_script.js  sauspiel_webext_diskussionen_content_script.js  web_worker.js
scripts/: bench_equiv.sh  bench_expensive_eichel_wenz_von_3.sh  bench_snapshotcache.sh  bench_stichoracle.sh  bench_suggest_card_ca_100s.sh  bench_suggest_card_ca_7.4s.sh  bench_suggest_card_wenz.sh  convert_to_rules_stichseq.sh  measure_compile_time.sh  suggest_card_concrete.sh  suggest_card_expensive_ramsch.sh  test_against_git_head.sh
src/: accountbalance.rs  card.rs  cardvectorparser.rs  combinatorics.rs  game.rs  gamestate.rs  hand.rs  main.rs  player.rs  playercomputer.rs  playerhuman.rs  rules.rs  ruleset.rs  rulesrufspiel.rs  rulessolo.rs  skui.rs  stich.rs  suspicion.rs
testdata/: bench_suggest_card_ca_7.4s.sh  isar_interactive.txt
tools/: combinatorics.ods  css.less  test_rules.py
util/: Cargo.toml
webext/: openschafkopf_webext
(+120 files in other folders)
