[workspace]
members = [
    "main",
    "util",
    "netschafkopf_helper",
    "sauspiel_webext",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["openschafkopf"]
edition = "2021"
license-file = "LICENSE"

[profile.release]
codegen-units = 1

[profile.release-profile]
inherits = "release"
debug = true
