[workspace]
members = [
    "main",
    "util",
    "netschafkopf_helper",
    "sauspiel_webext",
    "html_generator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["openschafkopf"]
edition = "2024"
license-file = "LICENSE"

[profile.release-profile]
inherits = "release"
debug = true
