[package]
name = "openschafkopf"
version = "0.1.0"
authors = ["openschafkopf"]
edition = "2021"
license-file = "../LICENSE"
description = "An open source toolkit for Schafkopf, a Bavarian card game."

[build-dependencies]
openschafkopf_util = {path = "../util"}
as_num = "0"
resvg = "0"

[dependencies]
atty = "0"
termcolor = "1"
combine = "3"
rand = "0"
ncurses = "5"
itertools = "0"
plain_enum = "0"
permutohedron = "0"
clap = {version="3", features = ["std", "color", "suggestions", "wrap_help"]} # see https://docs.rs/clap/latest/clap/index.html#feature-flags
arrayvec = "0"
rayon = "1"
toml = "0"
as_num = "0"
num-integer = "0"
failure = "0" # TODO remove this dependency
derive-new = "0"
chrono = "0"
# TODO can we have a cfg feature "sauspiel" that does not use the corresponding crates?
select = "0"
glob = "0"
openschafkopf_util = {path = "../util"}
futures = "0.3"
async-std = "1"
async-tungstenite = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_repr = "0"
reqwest = "0"
tokio = { version = "1", features = ["full"] } # TODO can we get rid of this?
byteorder = "1"
fern = "0"
dirs = "2"
log = "0"

[dev-dependencies]
serde_test = "1"

[features]
default = ["cli", "suggest-card", "parse", "analyze", "websocket", "hand-stats", "dl", "webext"]
cli = []
suggest-card = []
parse = []
analyze = []
websocket = []
hand-stats = []
dl = []
webext = ["suggest-card"]
