[package]
name = "openschafkopf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
description = "An open source toolkit for Schafkopf, a Bavarian card game."

[dependencies]
termcolor = "1"
rand = "0"
ncurses = "5"
itertools = "0"
plain_enum = "0"
clap = {version="3", features = ["std", "color", "suggestions", "wrap_help"]} # see https://docs.rs/clap/latest/clap/index.html#feature-flags
arrayvec = "0"
rayon = "1"
toml = "0"
as_num = "0"
num-integer = "0"
failure = "0" # TODO remove this dependency
derive-new = "0"
chrono = "0"
select = "0"
glob = "0"
openschafkopf_util = {path = "../util"}
openschafkopf_lib = {path = "../lib"}
html_generator = {path = "../html_generator"}
futures = "0.3"
async-std = "1" # Probably TODO migrate to smol, according to https://github.com/async-rs/async-std/pull/1099
async-tungstenite = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
byteorder = "1"
rhai = {version="1", features = ["sync"]}
