[package]
name = "netschafkopf_helper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dirs = "5.0.1"
itertools = "0.11.0"
libc = "0.2.147"
log = "0.4.19"
retour = { git = "https://github.com/phimuemue/retour-rs.git" } # TODO eliminate own fork once https://github.com/Hpmason/retour-rs/issues/69 is solved
simple-logging = "2.0.2"
winapi = { version = "0.3.9", features = ["consoleapi", "libloaderapi", "minwindef", "memoryapi", "winuser"] }
openschafkopf_util = {path = "../util"}
openschafkopf_lib = {path = "../lib"}
plain_enum = "0"
as_num = "0"
