[package]
name = "sauspiel_webext"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
sauspiel_webext_use_json = []

[dependencies]
wasm-bindgen = "0.2.100"
html_generator = {path = "../html_generator"}
openschafkopf_util = {path = "../util"}
openschafkopf_lib = {path = "../lib"}
plain_enum = "0"
getrandom = { version = "0", features = ["wasm_js"] } # see https://docs.rs/getrandom/latest/getrandom/#webassembly-support
itertools = "0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
[dependencies.web-sys]
version = "0.3.66"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCollection',
    'HtmlElement',
    'Location',
    'Node',
    'Window',
    'XmlHttpRequest',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
